--- a/realtime/sockjs/index.html
+++ b/realtime/sockjs/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     SockJS
-    <script type="text/javascript" charset="utf-8" src="http://cdn.sockjs.org/sockjs-0.3.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="http://cdn.sockjs.org/sockjs-0.3.js"></script>
     <script type="text/javascript" charset="utf-8">
       var sock = new SockJS('http://localhost:9999/echo');
       sock.onopem = function() { console.log('open'); };
